--- a/web-scraping-electron-app/renderer/components/about.html
+++ b/web-scraping-electron-app/renderer/components/about.html
@@ -1,12 +1,10 @@
-<!--
-    HTML component used for the about page in the application.
--->
-<div>
-    <div id="about-container">
-        <h1>About</h1>
-        Node.js Version: <span id="node-version"></span>
-        Chromium Version: <span id="chrome-version"></span>
-        Electron Version <span id="electron-version"></span>
+<!-- HTML component used for the about page in the application. -->
+<div class="container">
+    <div id="about-container" class="my-5">
+        <h1 class="display-4">About</h1>
+        <p>Node.js Version: <span id="node-version"></span></p>
+        <p>Chromium Version: <span id="chrome-version"></span></p>
+        <p>Electron Version: <span id="electron-version"></span></p>
     </div>
-    <script src='../renderer/js/renderer.js'></script>
 </div>
+<script src="../renderer/js/renderer.js"></script>
