--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -1,9 +1,8 @@
-<!--
-    HTML component used for the home page in the application.
--->
-<div>
-    <div id="home-container">
-        <h1>Home</h1>
+<!-- HTML component used for the home page in the application. -->
+<div class="container">
+    <div id="home-container" class="my-5">
+        <h1 class="display-4">Home</h1>
+        <p>Welcome to our modern, elegant application!</p>
     </div>
-    <script src='../renderer/js/renderer.js'></script>
 </div>
+<script src="../renderer/js/renderer.js"></script>
