--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -3,9 +3,7 @@
 -->
 <div>
     <!--The associated logic for the component-->
-    <script type="module">
-        import {testCommWithPyAPI} from '../js_to_py_comms.js';
-
+    <script>
         var scrapePerformed = false;
 
         function submitBtnPressed() {
@@ -19,8 +17,6 @@
                 $('#results-container').toggle();
                 scrapePerformed = true;
             }
-
-            testCommWithPyAPI();
         } 
     </script>
 
@@ -44,7 +40,7 @@
                 <div class="mb-3 row">
                     <label for="staticURL" class="col-sm-2 col-form-label">URL</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="staticURL" value="">
+                        <input type="text" readonly class="form-control-plaintext default-cursor" id="staticURL" value="">
                     </div>
                 </div>
                 
