--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div id="home-container" class="my-5">
         <h1 class="display-4">Home</h1>
-        <p>Welcome to our modern, elegant application!</p>
+        <p>Welcome to our modern, elegant web scraping application!</p>
     </div>
 </div>
 <script src="../renderer/js/renderer.js"></script>
