Task-78 Tweaked app styling to fix visual bugs

--- a/web-scraping-electron-app/renderer/components/home.html
+++ b/web-scraping-electron-app/renderer/components/home.html
@@ -1,6 +1,6 @@
 <!-- HTML component used for the home page in the application. -->
-<div class="container">
-    <div id="home-container" class="my-5">
+<div>
+    <div id="home-container" class="my-5 container">
         <h1 class="display-4">Home</h1>
         <p>Welcome to our modern, elegant web scraping application!</p>
     </div>
