--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -1,6 +1,6 @@
 <!-- HTML component used for the web scraping form in the application. -->
-<div class="container">
-    <div id="scrape-container" class="my-5">
+<div>
+    <div id="scrape-container" class="my-5 container">
         <h1 class="display-4">Web Scraper Form</h1>
 
         <!-- Scraper Form -->
