--- a/web-scraping-electron-app/renderer/components/about.html
+++ b/web-scraping-electron-app/renderer/components/about.html
@@ -1,6 +1,6 @@
 <!-- HTML component used for the about page in the application. -->
-<div class="container">
-    <div id="about-container" class="my-5">
+<div>
+    <div id="about-container" class="my-5 container">
         <h1 class="display-4">About</h1>
         <p>Node.js Version: <span id="node-version"></span></p>
         <p>Chromium Version: <span id="chrome-version"></span></p>
