Task-81 Tweaking code to work when packaging
This has resulted in the GUI opening, but it still won't open the python backend server executable

--- a/web-scraping-electron-app/renderer/components/scrape.html
+++ b/web-scraping-electron-app/renderer/components/scrape.html
@@ -10,7 +10,7 @@
                     <label for="url-input" class="form-label">URL of Web Page</label>
                     <div class="input-group mb-3">
                         <input id="url-input" type="text" class="form-control" placeholder="Enter the URL here" aria-label="URL" aria-describedby="button-addon2">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon2" onclick="submitBtnPressed()">Submit</button>
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Submit</button>
                     </div>
                 </div>
             </form>
@@ -61,17 +61,5 @@
 
 <!-- JavaScript for Form Handling -->
 <script>
-    var scrapePerformed = false;
 
-    function submitBtnPressed() {
-        console.log("Submit Pressed!");
-
-        var url = document.getElementById('url-input').value;
-        document.getElementById('staticURL').value = url;
-
-        if (!scrapePerformed) {
-            $('#results-container').toggle();
-            scrapePerformed = true;
-        }
-    }
 </script>
